changes static "/usr/share/pulp/wsgi" in templates to pull from $pulp::docroot with default value of "/usr/share/pulp/wsgi", this allows usage of rpm packages that install in /srv/pulp instead of /usr/share/pulp/wsgi

--- a/templates/etc/httpd/conf.d/pulp_ostree.conf.erb
+++ b/templates/etc/httpd/conf.d/pulp_ostree.conf.erb
@@ -7,7 +7,7 @@
 Alias /pulp/ostree /var/www/pub/ostree/
 
 <Directory /var/www/pub/ostree>
-    WSGIAccessScript /usr/share/pulp/wsgi/repo_auth.wsgi
+    WSGIAccessScript <%= scope.lookupvar("pulp::docroot") rescue "/usr/share/pulp/wsgi" %>/repo_auth.wsgi
     SSLRequireSSL
     SSLVerifyClient <%= scope['pulp::ssl_verify_client'] %>
     SSLVerifyDepth 2
