--- a/templates/etc/httpd/conf.d/pulp_content.conf.erb
+++ b/templates/etc/httpd/conf.d/pulp_content.conf.erb
@@ -1,9 +1,9 @@
 WSGISocketPrefix run/wsgi
 WSGIProcessGroup pulp-content
 WSGIApplicationGroup pulp-content
-WSGIScriptAlias /pulp/content /usr/share/pulp/wsgi/content.wsgi
+WSGIScriptAlias /pulp/content <%= scope.lookupvar("pulp::docroot") rescue "/usr/share/pulp/wsgi" %>/content.wsgi
 WSGIDaemonProcess pulp-content user=apache group=apache processes=3 display-name=%{GROUP}
-WSGIImportScript /usr/share/pulp/wsgi/content.wsgi process-group=pulp-content application-group=pulp-content
+WSGIImportScript <%= scope.lookupvar("pulp::docroot") rescue "/usr/share/pulp/wsgi" %>/content.wsgi process-group=pulp-content application-group=pulp-content
 
 <Files content.wsgi>
     WSGIPassAuthorization On
