--- a/templates/etc/httpd/conf.d/pulp_streamer.conf.erb
+++ b/templates/etc/httpd/conf.d/pulp_streamer.conf.erb
@@ -8,7 +8,7 @@ Alias /streamer /var/www/streamer
 
 <Directory /var/www/streamer>
     # Enable URL signature checking
-    WSGIAccessScript /usr/share/pulp/wsgi/streamer_auth.wsgi
+    WSGIAccessScript <%= scope.lookupvar("pulp::docroot") rescue "/usr/share/pulp/wsgi" %>/streamer_auth.wsgi
 
     RewriteEngine on
 
